cluster/loadbalancer/kustomization/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-hello
spec:
  selector:
    matchLabels:
      app: http-hello
  template:
    metadata:
      labels:
        app: http-hello
    spec:
      containers:
      - name: http-hello
        image: http-hello
        args:
        - /agnhost
        - netexec
        - --http-port=8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
