cluster/loadbalancer/kustomization/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-server
spec:
  selector:
    matchLabels:
      app: ws-server
  template:
    metadata:
      labels:
        app: ws-server
    spec:
      containers:
      - name: ws-server
        image: ws-server
        imagePullPolicy: Always
        resources:
          # limits:
          #   memory: "128Mi"
          #   cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 9001
