cluster/loadbalancer/kustomization/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-hello
spec:
  selector:
    app: http-hello
  ports:
  - port: 80
    targetPort: 8080
