cluster/loadbalancer/kustomization/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-hello
  labels:
    name: http-hello
spec:
  ingressClassName: nginx
  rules:
  - host: ws-2.do.freetale.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-hello
            port: 
              number: 80
